k8s-v1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-v1
spec:
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: v1
        image: v1_v1
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
