services.yml
apiVersion: v1
kind: Service
metadata:
  name: v1-service
spec:
  selector:
    app: v1
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: v2-service
spec:
  selector:
    app: v2
  ports:
  - port: 8080
    targetPort: 8080
