routes.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: v1
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "server.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1
    backendRefs:
    - name: v1-service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: v2
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "server.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v2
    backendRefs:
    - name: v2-service
      port: 80
